{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 631,
  "lineage": "cb42a7bf-56e1-7496-c695-aa435178b45d",
  "resources": [
    {
      "module": "module.database",
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:133433735071:security-group/sg-01cc1ecacc1ac01e0",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-01cc1ecacc1ac01e0",
            "name": "default",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-010988ec05216299a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:133433735071:internet-gateway/igw-0c701f686f905fbb2",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-010988ec05216299a"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-010988ec05216299a"
                ]
              }
            ],
            "id": "igw-0c701f686f905fbb2",
            "internet_gateway_id": "igw-0c701f686f905fbb2",
            "owner_id": "133433735071"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:133433735071:vpc/vpc-010988ec05216299a",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-040b8e7c4bd361546",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0aa940fe1d4755940",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-010988ec05216299a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09eea9dbbeafa410f",
            "owner_id": "133433735071"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "visible_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-065c507fea3a6011c",
            "association_id": "eipassoc-0c0f8e0f561304b2c",
            "domain": "vpc",
            "id": "eipalloc-065c507fea3a6011c",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-08eaf68a2a36aa7d8",
            "private_dns": "ip-172-31-44-45.eu-north-1.compute.internal",
            "private_ip": "172.31.44.45",
            "public_dns": "ec2-16-16-17-242.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.16.17.242",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.network.data.aws_internet_gateway.default",
            "module.network.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-065c507fea3a6011c",
            "association_id": "eipassoc-0c0f8e0f561304b2c",
            "connectivity_type": "public",
            "id": "nat-09ba48e1904d11743",
            "network_interface_id": "eni-08eaf68a2a36aa7d8",
            "private_ip": "172.31.44.45",
            "public_ip": "16.16.17.242",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02c049bb71a4ed932"
          },
          "dependencies": [
            "module.network.aws_eip.visible_address",
            "module.network.data.aws_internet_gateway.default",
            "module.network.data.aws_subnets.default",
            "module.network.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:133433735071:route-table/rtb-0a2a0daecc2761f8b",
            "id": "rtb-0a2a0daecc2761f8b",
            "owner_id": "133433735071",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09ba48e1904d11743",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-010988ec05216299a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.visible_address",
            "module.network.aws_nat_gateway.nat_gateway",
            "module.network.data.aws_internet_gateway.default",
            "module.network.data.aws_subnets.default",
            "module.network.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0feb230fefd6595df",
            "route_table_id": "rtb-0a2a0daecc2761f8b",
            "subnet_id": "subnet-02c049bb71a4ed932"
          },
          "dependencies": [
            "module.network.aws_eip.visible_address",
            "module.network.aws_nat_gateway.nat_gateway",
            "module.network.aws_route_table.private",
            "module.network.data.aws_internet_gateway.default",
            "module.network.data.aws_subnets.default",
            "module.network.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "connect_to_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:133433735071:security-group/sg-06d9ed1a120e4653c",
            "description": "Security group attached to RDS, to allow local connection to the database, for database administration",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic from the database",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-06d9ed1a120e4653c",
            "ingress": [
              {
                "cidr_blocks": [
                  "202.138.37.42/32"
                ],
                "description": "Allow connections from the designated home IP address, to administrate the database",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "connect_to_rds",
            "name_prefix": "",
            "owner_id": "133433735071",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-010988ec05216299a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ingress"
              }
            ]
          ],
          "dependencies": [
            "module.network.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_to_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:133433735071:security-group/sg-03ebfdc5d629b6d8f",
            "description": "Security group attached to Lambda functions, so other security groups can refer to it, to allow connection to RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic from the function",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-03ebfdc5d629b6d8f",
            "ingress": [],
            "name": "lambda_to_rds",
            "name_prefix": "",
            "owner_id": "133433735071",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-010988ec05216299a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_to_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:133433735071:security-group/sg-0cbc73eda17641a62",
            "description": "Security group attached to RDS, to allow connections from Lambda functions to the database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic from the database",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-0cbc73eda17641a62",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow connections from the security group attached to Lambda functions",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03ebfdc5d629b6d8f"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds_to_lambda",
            "name_prefix": "",
            "owner_id": "133433735071",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-010988ec05216299a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.lambda_to_rds",
            "module.network.data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}